# GJZS

./: .gitignore  .gitmodules  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni.c  version.c
app/src/main/cpp/integrity/: genuine.c  genuine.h
app/src/main/java/io/github/gjzs/: FirstFragment.kt  MainActivity.kt  SecondFragment.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  content_main.xml  fragment_first.xml  fragment_second.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-land/: dimens.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-w1240dp/: dimens.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
buildSrc/src/main/kotlin/: Common.kt  Version.kt
libs/ui/common/: build.gradle.kts
